Fix numbers null and header overflow

--- a/src/CTable.css
+++ b/src/CTable.css
@@ -40,6 +40,12 @@
     transform: translateY(0.15em);
 }
 
+/* Prevent x scroll back */
+
+html, body {
+    overscroll-behavior-x: none;
+}
+
 /* Global CTable rules */
 
 .ctable-head-table th {
@@ -47,6 +53,8 @@
     padding-left:0.2em;
     padding-right:0.2em;
     color: var(--bulma-body-color);
+    white-space: nowrap;
+    overflow: hidden;
 }
 
 .ctable-head-table {
